--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,22 +2,30 @@
 
 <main>
     <ul>
-        <li id="users">
-            <app-user [name]="users[0].name" [avatar]="users[0].avatar"/>
-        </li>
-        <li id="users">
-            <app-user [name]="users[1].name" [avatar]="users[1].avatar"/>
-        </li>
-        <li id="users">
-            <app-user [name]="users[2].name" [avatar]="users[2].avatar"/>
-        </li>
-        <li id="users">
-            <app-user [name]="users[3].name" [avatar]="users[3].avatar"/>
-        </li>
-        <li id="users">
-            <app-user [name]="users[4].name" [avatar]="users[4].avatar"/>
-        </li>
+        @for(user of users; track user.id) {
+            <li id="users">
+                <app-user [isSelected]="user.id === selectedUserId" [user]="user" (select)="onSelectUser($event)"/>
+            </li>
+        }
+        
+        <!-- <li *ngFor="let user of users" id="users">
+            <app-user [user]="user" (select)="onSelectUser($event)"/>
+        </li> -->
+        
     </ul>
+
+    @if (selectedUser) {
+        <app-tasks [userId]="selectedUser.id" [name]="selectedUser.name"/>
+    }
+    @else {
+        <p id="fallback">Select a user to see their tasks!!!</p> 
+    }
+
+    <!-- <app-tasks *ngIf="selectedUser; else fallback" [name]="selectedUser.name"/>
+
+    <ng-template #fallback>
+        <p id="fallback">Select a user to see their tasks!!!</p>
+    </ng-template> -->
 </main>
 
 
