--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,20 +7,25 @@ main {
   gap: 2rem;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+}
 #users {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  margin-bottom:10px;
   display: flex;
-  gap: 0.5rem;
+  gap: 10rem;
   overflow: auto;
+  padding: 0;
 }
 
 #fallback {
   font-weight: bold;
   font-size: 1.15rem;
-  margin: 0;
   text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
 @media (min-width: 768px) {
