--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
-@if(isAddTaskAvailaible) {
-    <app-new-task />
+@if(isAddingTask) {
+    <app-new-task (cancel)="onCancelButton()" (addTask)="onCreateTask($event)"/>
 }
 
 <section id="tasks">
