--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -4,15 +4,14 @@
       <!-- agar square brackets ke andar directly src and alt likha hua hai so it means ki angular ko src and alt name ki properties dhundhni hai-->
       <!-- But agar square brackets mein attr.src and attr.alt likha hua hai toh angular ko src and alt name ke attributes dhundhne hai naa ki properties. -->
 
-<div>
-    <button [class.active]="isSelected" (click)="onSelectUser()">
+<app-card>
+  <button [class.active]="isSelected" (click)="onSelectUser()">
       <!-- This binding is known as property binding. -->
       <!-- <img [src] = "imagePath" [alt] = "selectedUser.name"/>  -->
       <!-- This binding is known as attribute binding -->
       <!-- <img [attr.src] = "'../assets/users/' + selecteduser.avatar" [attr.alt] = "selecteduser.name"/> -->
       
-      <img [src] = "imagePath" [alt] = "user.name"/>
-
-      <span>{{ user.name }}</span>
-    </button>
-  </div>
+    <img [src] = "imagePath" [alt] = "user.name"/>
+    <span>{{ user.name }}</span>
+  </button>
+</app-card>
