--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if(isAddingTask) {
-    <app-new-task (cancel)="onCancelButton()" (addTask)="onCreateTask($event)"/>
+    <app-new-task [userId]="userId" (close)="onCancelButton()"/>
 }
 
 <section id="tasks">
@@ -13,7 +13,7 @@
     <ul>
         @for (task of selectedUserTasks; track task.id) {
             <li>
-                <app-task [task]="task" (complete)="onCompleteRemoveTask($event)" />
+                <app-task [task]="task" />
             </li>
         }
     </ul>
