--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -14,4 +14,5 @@
     <img [src] = "imagePath" [alt] = "user.name"/>
     <span>{{ user.name }}</span>
   </button>
+  <button type="button" id="remove-button" (click)="removeUser()">Remove</button>
 </app-card>
