--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,29 @@ ul {
   padding: 0;
 }
 
+button {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.35rem 0.5rem;
+  background-color: #433352;
+  color: #c3b3d1;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  width: 100%;
+  min-width: 10rem;
+  text-align: center;
+  border-radius: 8px;
+}
+
+button:hover,
+button:active,
+.active {
+  background-color: #9965dd;
+  color: #150722;
+}
+
 #fallback {
   font-weight: bold;
   font-size: 1.15rem;
