--- a/src/app/tasks/task/task.component.scss
+++ b/src/app/tasks/task/task.component.scss
@@ -15,6 +15,10 @@ article {
   .actions {
     text-align: right;
     margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    gap: 8px;
   }
   
   .actions button {
