--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,7 @@ ul {
 button {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
   padding: 0.35rem 0.5rem;
   background-color: #433352;
@@ -34,6 +35,8 @@ button {
   min-width: 10rem;
   text-align: center;
   border-radius: 8px;
+  height: 40px;
+  margin-bottom: 15px;
 }
 
 button:hover,
