--- a/src/app/tasks/task/edit-task/edit-task.component.html
+++ b/src/app/tasks/task/edit-task/edit-task.component.html
@@ -19,7 +19,7 @@
 
     <p class="actions">
       <button type="button" (click)="onCancel()">Cancel</button>
-      <button type="submit">Confirm</button>
+      <button type="submit">Save</button>
     </p>
   </form>
 </dialog>
