--- a/src/app/user/delete-user/delete-user.component.html
+++ b/src/app/user/delete-user/delete-user.component.html
@@ -1,6 +1,6 @@
 <div class="backdrop" (click)="onCancel()"></div>
 <dialog open>
-    <h2>Do you really wanna delete this task??? </h2>
+    <h2>Do you really wanna delete this user??? </h2>
     <form (submit)="onConfirm()">
         <p class="actions">
             <button type="button" (click)="onCancel()">Cancel</button>
