--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,13 @@ main {
   max-width: 50rem;
   margin: 2.5rem auto;
   display: grid;
-  grid-auto-flow: row;
+  grid-auto-flow: column;
+  gap: 2rem;
+}
+
+.tasks {
+  display: flex;
+  flex-direction: column;
   gap: 2rem;
 }
 
