--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,10 @@
     <div class="tasks">
         @if (selectedUser) {
             <app-tasks [userId]="selectedUser.id" [name]="selectedUser.name"/>
-            <app-completed-tasks [userId]="selectedUser.id"></app-completed-tasks>
+            @if(showCompletedTasks) {
+                <!-- <p>{{showCompletedTasks}}</p> -->
+                <app-completed-tasks [userId]="selectedUser.id" />
+            }
         }
         @else {
             <p id="fallback">Select a user to see their tasks!!!</p> 
